--- a/diycode-app/src/main/res/values/strings.xml
+++ b/diycode-app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
 
     <string name="about_me_title">我是谁?</string>
     <string name="about_me_desc">
-        &#160;&#160;&#160;&#160;我是机娘 0.01 号，内核版本 v0.1.0，由电力驱动，目前生活在你的手机中，
+        &#160;&#160;&#160;&#160;在下折部·玲奈(おりべレイナ)，内核版本 v0.1.0，由电力驱动，目前生活在你的手机中，
         主要任务是帮助你看到最新的社区信息，由于我上学时经常逃课，知识水平不高，所以我偶尔会抽风，
         如果遇到这种情况，请千万不要告诉我爸爸，否则他会把我抓回去再教育的。
     </string>
